# VAE-VQ-VAE

./: README.md  VAE_vs_VQVAE.md  pyproject.toml
VAE/: VAE.ipynb  model.py
VAE/weights/: decoder.keras  encoder.keras
VQ-VAE/: VQVAE.ipynb  model.py
VQ-VAE/weights/: decoder.keras  encoder.keras  vqvae.keras
